// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VMessages.js should accept a scoped slot 1`] = `
<div class="v-messages theme--light">
  <transition-group-stub tag="div"
                         name="message-transition"
                         class="v-messages__wrapper"
  >
    <div class="v-messages__message">
      <div>
        Foo
      </div>
    </div>
  </transition-group-stub>
</div>
`;

exports[`VMessages.js should allow HTML 1`] = `
<div class="v-messages theme--light">
  <transition-group-stub tag="div"
                         name="message-transition"
                         class="v-messages__wrapper"
  >
    <div class="v-messages__message">
      &lt;a href="#"&gt;a link&lt;/a&gt;
    </div>
  </transition-group-stub>
</div>
`;

exports[`VMessages.js should not allow HTML 1`] = `
<div class="v-messages theme--light">
  <transition-group-stub tag="div"
                         name="message-transition"
                         class="v-messages__wrapper"
  >
    <div class="v-messages__message">
      &lt;a href="#"&gt;a link&lt;/a&gt;
    </div>
  </transition-group-stub>
</div>
`;

exports[`VMessages.js should show messages 1`] = `
<div class="v-messages theme--light">
  <transition-group-stub tag="div"
                         name="message-transition"
                         class="v-messages__wrapper"
  >
    <div class="v-messages__message">
      foo
    </div>
    <div class="v-messages__message">
      bar
    </div>
  </transition-group-stub>
</div>
`;

exports[`VMessages.js should show messages 2`] = `
<div class="v-messages theme--light">
  <transition-group-stub tag="div"
                         name="message-transition"
                         class="v-messages__wrapper"
  >
  </transition-group-stub>
</div>
`;
